@startuml packageDiagram

package "Controller" {
    class ClienteController
    class EmpresaController
    class AutomovelController
    class ContratoController
    class BancoController
    class LocacaoController
    class ContratoCreditoController
}

package "Service" {
    class ClienteService
    class EmpresaService
    class AutomovelService
    class ContratoService
    class BancoService
    class LocacaoService
    class ContratoCreditoService
}

package "Repository" {
    class ClienteRepository
    class EmpresaRepository
    class AutomovelRepository
    class ContratoRepository
    class BancoRepository
    class LocacaoRepository
    class ContratoCreditoRepository
}

package "Model" {
    class Cliente
    class Empresa
    class Banco
    class Automovel
    class Contrato
    class ContratoCredito
    class Locacao
    enum Duracao
}

ClienteController --> ClienteService
EmpresaController --> EmpresaService
AutomovelController --> AutomovelService
ContratoController --> ContratoService
BancoController --> BancoService
LocacaoController --> LocacaoService
ContratoCreditoController --> ContratoCreditoService

ClienteService --> ClienteRepository
EmpresaService --> EmpresaRepository
AutomovelService --> AutomovelRepository
ContratoService --> ContratoRepository
BancoService --> BancoRepository
LocacaoService --> LocacaoRepository
ContratoCreditoService --> ContratoCreditoRepository

@enduml